--- a/index.html
+++ b/index.html
@@ -35,14 +35,7 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-            >
-              <path d="M24 6h-24v-4h24v4zm0 4h-24v4h24v-4zm0 8h-24v4h24v-4z" />
-            </svg>
+			 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M4 22h-4v-4h4v4zm0-12h-4v4h4v-4zm0-8h-4v4h4v-4zm3 0v4h17v-4h-17zm0 12h17v-4h-17v4zm0 8h17v-4h-17v4z"/></svg>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -64,7 +57,7 @@
                 <a class="nav-link header__nav-link" href="#">Blog</a>
               </li>
               <li class="nav-item header__nav-item">
-                <a class="nav-link header__nav-link" href="#">Conacts</a>
+                <a class="nav-link header__nav-link" href="#">Contacts</a>
               </li>
             </ul>
           </div>
@@ -92,21 +85,21 @@
         <div class="container">
           <h2 class="section-title">Categories</h2>
           <div class="row">
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-md-4 col-sm-4">
               <div class="cat__item cat__item--men overlay mb-4">
                 <h3 class="cat__item-title">
                   <a href="#" class="cat__link">Men</a>
                 </h3>
               </div>
             </div>
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-md-4 col-sm-4">
               <div class="cat__item cat__item--women overlay mb-4">
                 <h3 class="cat__item-title">
                   <a href="#" class="cat__link">Women</a>
                 </h3>
               </div>
             </div>
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-md-4 col-sm-4 ">
               <div class="cat__item cat__item--accessories overlay mb-4">
                 <h3 class="cat__item-title">
                   <a href="#" class="cat__link">Accessories</a>
@@ -161,7 +154,7 @@
 
     <footer class="footer overlay">
       <div class="container">
-        <p>&copy; All Rights Reserved. 2022.</p>
+        <p>Copyright Brandly. 2020</p>
       </div>
     </footer>
     <script
